--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3962,7 +3962,7 @@ input, select, textarea {
 
 	#intro {
 		background-attachment: fixed;
-		background-image: url("images/intro.svg"); 		/* Intro Photo */
+		background-image: url("images/rogue_title.png"); 		/* Intro Photo */
 		background-position: top right;
 		background-repeat: no-repeat;
 		background-size: 100% 100%;
