--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -88,11 +88,18 @@ input, select, textarea {
 /* Itch Game Embed*/
 .embed
 {
-	background-color: #0098db;
-	border-radius: 15px;
-	border: 3px solid #0ce6f2;
-	position: relative;
-	left: 15%;
+		background-color: #0098db;
+		border-radius: 15px;
+		border: 3px solid #0ce6f2;
+		position: relative;
+		left: 15%;
+}
+@media screen and (max-width: 1280px) {
+	/* YouTube Embed */
+	.embed
+	{
+		display: none;
+	}
 }
 
 /* YouTube Embed */
