--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -85,6 +85,18 @@ input, select, textarea {
 	appearance: none;
 }
 
+/* Photo Gallery */
+div.scroll-container {
+	background-color: #333;
+	overflow: auto;
+	white-space: nowrap;
+	padding: 10px;
+  }
+  
+  div.scroll-container img {
+	padding: 10px;
+  }
+
 /* Itch Game Embed*/
 .embed
 {
