--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -124,13 +124,17 @@ input, select, textarea {
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+  background-color: rgba(32,21,51,0.8);
 }
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
+  color: lightsteelblue;
+  background-color: rgba(32,21,51,0.8);
+  font-size: 16.5px;
+  font-weight: normal;
+  line-height: 1.75;
+  font-family: Arial, Helvetica, sans-serif;
   padding: 8px 12px;
   position: absolute;
   top: 0;
